<resources>
    <string name="app_name">MapsApp</string>
    <string name="title_activity_info_list">InfoListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_map">查看地圖</string>
    <string name="explore">探索</string>
    <string name="find_friends">尋找好友</string>
<!--    <string name="signal_type_1">道路结冰</string>-->
<!--    <string name="signal_type_2">暴雪</string>-->
<!--    <string name="signal_type_3">暴雨</string>-->
<!--    <string name="signal_type_4">冰雹</string>-->
<!--    <string name="signal_type_5">大风</string>-->
<!--    <string name="signal_type_6">大雾</string>-->
<!--    <string name="signal_type_7">高温</string>-->
<!--    <string name="signal_type_8">干旱</string>-->
<!--    <string name="signal_type_9">寒潮</string>-->
<!--    <string name="signal_type_10">雷电</string>-->
<!--    <string name="signal_type_11">霾</string>-->
<!--    <string name="signal_type_12">沙尘暴</string>-->
<!--    <string name="signal_type_13">霜冻</string>-->
<!--    <string name="signal_type_14">台风</string>-->
<!--    <string name="signal_type_15">道路冰雪</string>-->
<!--    <string name="signal_type_16">海上大风</string>-->
<!--    <string name="signal_type_17">寒冷</string>-->
<!--    <string name="signal_type_18">森林火险</string>-->
    <string-array name="signal_type_array">
        <item>道路结冰</item>
        <item>暴雪</item>
        <item>暴雨</item>
        <item>冰雹</item>
        <item>大风</item>
        <item>大雾</item>
        <item>高温</item>
        <item>干旱</item>
        <item>寒潮</item>
        <item>雷电</item>
        <item>霾</item>
        <item>沙尘暴</item>
        <item>霜冻</item>
        <item>台风</item>
        <item>道路冰雪</item>
        <item>海上大风</item>
        <item>寒冷</item>
        <item>森林火险</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_sign_up">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenter_password">Reenter password</string>
    <string name="hint_resident_id">Resident ID</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="button_post">Post</string>
    <string name="label_new_post">New post</string>
    <string name="hint_message">Message</string>
    <string name="people_num">People</string>
    <string name="signal_level">Signal level</string>
</resources>
