<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_below="@id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_below="@id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_gravity="bottom"
            android:layout_below="@id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_below="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signInButton"
                android:layout_height="60dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_height="60dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>