<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TableLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="150dp">

                <ImageButton
                    android:id="@+id/toMapViewButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/view_map"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@+id/toMapViewLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_map_black_24dp" />

                <TextView
                    android:id="@+id/toMapViewLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_map"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/toMapViewButton"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="150dp">

                <ImageButton
                    android:id="@+id/toExploreButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/explore"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@+id/toExploreLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_explore_black_24dp" />

                <TextView
                    android:id="@+id/toExploreLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/toExploreButton"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="150dp">

                <ImageButton
                    android:id="@+id/toFindFriendsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/find_friends"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toTopOf="@+id/toFindFriendsLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_black_24dp" />

                <TextView
                    android:id="@+id/toFindFriendsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_friends"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:textSize="30sp"
                    app:layout_constraintTop_toBottomOf="@+id/toFindFriendsButton"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>